Bug 430461 - Splash screen is on top of all windows with Xfce4 and Openbox, covering the "File does not exist" dialogue
Summary: Splash screen is on top of all windows with Xfce4 and Openbox, covering the "...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.4.1
Platform: Debian testing Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL: https://gitlab.xfce.org/xfce/xfwm4/-/...
Keywords:
: 437013 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-12-16 15:31 UTC by Aleksej
Modified: 2021-08-24 08:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleksej 2020-12-16 15:31:09 UTC
With Xfce4 or Openbox (including LXDE), when specifying a non-existing file on the command line, Krita shows the splash screen in front of all windows, so if there is a dialogue and the full file name is short enough, the dialogue is covered completely. It just looks like there is no way to close the splash screen by clicking.

STEPS TO REPRODUCE
1. Start "krita blabla", where "blabla" is a non-existent file name.

OBSERVED RESULT
The splash screen is on top of all windows, covering the "The file …/blabla does not exist" dialogue. Minimizing Krita's main window leaves the splash screen up and on top of all other windows. It cannot be moved.

EXPECTED RESULT
The splash screen is tied to Krita, the dialogue is on top of it.

SOFTWARE/OS VERSIONS
Linux: Debian GNU/Linux bullseye/sid
Qt Version: 5.15.1
Comment 1 Halla Rempt 2020-12-16 15:48:33 UTC
Um, why not report that to those window managers? Sounds like those window managers mis-intrerpret the SplashScreen hint.
Comment 2 Aleksej 2020-12-17 23:22:41 UTC
An Xfce developer added a workaround, but said:

Krita developers are mistaken, the splash screen is marked as being above as see with xprop:

_NET_WM_STATE(ATOM) = _NET_WM_STATE_SKIP_PAGER, _NET_WM_STATE_SKIP_TASKBAR, _NET_WM_STATE_ABOVE, _NET_WM_STATE_FOCUSED
Comment 3 Aleksej 2020-12-17 23:25:34 UTC
I understand nothing about this (e.g., TYPE vs STATE), so please deal with it yourself if you care.
Comment 4 Tiar 2021-08-19 19:39:19 UTC
"Sounds like those window managers mis-intrerpret the SplashScreen hint."
What would be the expected behaviour? I thought Krita splash screen just gets on top of everything, and that seems consistent with the behaviour explained.

But on Cinnamon (4.4.8) what I get is that first the splash screen appears, then I've got lots of "internal error" dialog boxes (which do appear on top of the splash screen), and then Krita stops starting, so the splash screen gets hidden/removed completely, then I get the "unnamed autosaves" dialog, and only then I get the "oops, the file doesn't exists" dialog, so there is no issue with the splash screen since it disappeared already.
Comment 5 Oleg 2021-08-23 17:22:55 UTC
Yes, The bug exists, tested in xubuntu 20.04
Probably it has the same origin with https://bugs.kde.org/show_bug.cgi?id=437013
Comment 6 Halla Rempt 2021-08-24 08:09:06 UTC
*** Bug 437013 has been marked as a duplicate of this bug. ***
Comment 7 Halla Rempt 2021-08-24 08:40:23 UTC
Git commit 9f2cb7e197a2f1add8cd82a175398974284e5587 by Halla Rempt.
Committed on 24/08/2021 at 08:39.
Pushed by rempt into branch 'master'.

Splash: Remove the stay on top hint on Linux

M  +1    -5    libs/ui/kis_splash_screen.cpp

https://invent.kde.org/graphics/krita/commit/9f2cb7e197a2f1add8cd82a175398974284e5587
Comment 8 Halla Rempt 2021-08-24 08:41:02 UTC
Git commit 5bbde7a5fc66e95dd6dc9039b5633c3c9af5df8b by Halla Rempt.
Committed on 24/08/2021 at 08:40.
Pushed by rempt into branch 'krita/5.0'.

Splash: Remove the stay on top hint on Linux
(cherry picked from commit 9f2cb7e197a2f1add8cd82a175398974284e5587)

M  +1    -5    libs/ui/kis_splash_screen.cpp

https://invent.kde.org/graphics/krita/commit/5bbde7a5fc66e95dd6dc9039b5633c3c9af5df8b