Splash: Remove the stay on top hint on Linux

BUG:430461
(cherry picked from commit 9f2cb7e197a2f1add8cd82a175398974284e5587)